# code

./: Cargo.toml  build.rs
c_libraries/libapp_c/: libapp_c.c
c_libraries/libapp_c/include/: libapp_c.h
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/http_server/: Cargo.toml
crates/libapp/: Cargo.toml  build.rs
crates/libapp/src/: lib.rs  linux.rs
crates/libapp/src/gfx/: opengl.rs
crates/libappvulkan/examples/: vk_headless.rs
crates/libappvulkan/src/: bindings.rs  lib.rs  linux.rs  win32.rs
crates/wayland_sys/: Cargo.toml  build.rs
libapp/: Cargo.toml
libapp/src/: lib.rs
libapp/src/linux_sys/: mod.rs  xcb.rs
libapp/src/linux_sys/x11/: mod.rs  x.rs
libapp/src/windows_sys/: mod.rs
libcode/: libcode.c
projects/: README.md
projects/jt_morris_com/: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  output.rs  rust-toolchain  web_api.musl.Dockerfile
projects/jt_morris_com/auth0/src/management/: mod.rs  scopes.rs
projects/jt_morris_com/db/src/: _url.rs  auth_state.rs  session.rs  transactions.rs
projects/jt_morris_com/frontend/: .gitignore  index.html
projects/jt_morris_com/frontend/src/: not_wasm32_unknown.rs  wasm32_unknown_unknown.rs
projects/jt_morris_com/migrations/2024-08-23-025556_init_db/: down.sql  up.sql
projects/jt_morris_com/migrations/2024-08-31-025833_update_users_add_username/: down.sql  up.sql
projects/jt_morris_com/proc_macros/: Cargo.toml
projects/jt_morris_com/proc_macros/src/: lib.rs
projects/jt_morris_com/src/: lib.rs  main.rs.bak
projects/jt_morris_com/src/frontend/: net.rs  not_wasm32_unknown_unknown.rs  wasm32_unknown_unknown.rs
projects/jt_morris_com/src/web_server/: config.rs  ops.rs  registration.rs  response.rs  session.rs
projects/jt_morris_com/src/web_server/db/: auth_state.rs  session.rs  transactions.rs  user.rs
projects/jt_morris_com/templates/: auth_callback_failure.html.tera  base.html.tera  error.html.tera  frontend.html.tera  login_page.html  ops_index.html.tera  registration_billing.html.tera  scheduler.html.tera  unauthorized.html.tera  user_transactions_upload.html.tera  vehicle_details.html.tera  vehicle_details_vehicle_not_found.html.tera
projects/personal_project/: package-lock.json  package.json
projects/personal_project/db/: seed.sql
projects/personal_project/db/auth/: register_user.sql
projects/personal_project/db/fuel_stops/: delete_fuel_stops.sql  get_fuel_stops.sql  post_fuel_stops.sql  put_fuel_stops.sql
projects/personal_project/db/fuel_total/: delete_fuel_total.sql  get_fuel_total.sql  post_fuel_total.sql  put_fuel_total.sql
projects/personal_project/db/receipt/: delete_receipt.sql  get_receipt.sql  post_receipt.sql  put_receipt.sql
projects/personal_project/db/trip/: delete_trip.sql  fuel_trip_join.sql  get_trip.sql  get_user_trip.sql  post_trip.sql  put_trip.sql  updateFuelTotalId.sql
projects/personal_project/public/: index.html
projects/personal_project/server/: index.js
projects/personal_project/server/controllers/: authController.js  fuel_stops_Controller.js  fuel_total_Controller.js  receiptController.js  tripController.js
projects/personal_project/src/: App.js  routes.js
projects/personal_project/src/Components/AddTrip/: AddTrip.css  AddTrip.css.map  AddTrip.js  AddTrip.scss
projects/personal_project/src/Components/DisplayTrip/: DisplayTrip.css  DisplayTrip.css.map  DisplayTrip.js  DisplayTrip.scss
projects/personal_project/src/Components/Header/: Header.css  Header.css.map  Header.js  Header.scss
projects/personal_project/src/Components/Home/: Home.css  Home.css.map  Home.js  Home.scss
projects/personal_project/src/redux/: store.js
rust_binaries/: README.md
rust_binaries/jt_morris_com/: .gitpod.yml  Cargo.toml  Diesel.toml  Trunk.toml  dev.compose.yaml
rust_binaries/jt_morris_com/.cargo/: config.toml
rust_binaries/jt_morris_com/.github/workflows/: rust.yaml
rust_binaries/jt_morris_com/auth0/: Cargo.toml
rust_binaries/jt_morris_com/auth0/src/: lib.rs
rust_binaries/jt_morris_com/auth0/src/auth0/: Cargo.toml
rust_binaries/jt_morris_com/auth0/src/management/: scopes_metaprogram.js
rust_binaries/jt_morris_com/db/: Cargo.toml
rust_binaries/jt_morris_com/db/src/: lib.rs  schema.rs  user.rs
rust_binaries/jt_morris_com/frontend/: Cargo.toml  build.ps1
rust_binaries/jt_morris_com/frontend/src/: types.rs  utils.rs
rust_binaries/jt_morris_com/migrations/2024-08-23-035647_alter_update_transactions/: down.sql  up.sql
rust_binaries/jt_morris_com/migrations/2024-08-23-191906_alter_session_convert_add_timestamp_to_expires/: down.sql  up.sql
rust_binaries/jt_morris_com/public/: scheduler.js
rust_binaries/jt_morris_com/public/frontend/: frontend.d.ts  frontend.js  frontend_bg.wasm  frontend_bg.wasm.d.ts
rust_binaries/jt_morris_com/src/: schema.rs
rust_binaries/jt_morris_com/src/frontend/: mod.rs  types.rs
rust_binaries/jt_morris_com/src/web_server/: authentication.rs  authorization.rs  mod.rs  ssr.rs  url.rs  user.rs  vehicles.rs
rust_binaries/jt_morris_com/templates/: InternalServerError.html.tera  bad_request.html.tera  frontend.html  login.html.tera  login_to_continue.html.tera  main_landing_page.html.tera  ops_dbquery.html.tera  ops_users_list.html.tera  signup.html.tera  start_registration.html.tera  user_dashboard.html.tera  user_settings_template.html.tera  vehicle_logbook_landing.html.tera  vehicles.html.tera  work_schedule_index.html.tera
rust_libraries/: README.md
rust_libraries/app/src/: main.rs
rust_libraries/libapp/: build.rs
rust_libraries/libapp/src/: linux.rs
rust_libraries/libappvulkan/: Cargo.toml
rust_libraries/libappvulkan/src/: bindings.rs  convert.py  custom_impls.rs  linux.rs
rust_libraries/libdb/: Cargo.toml
rust_libraries/libxorg/: Cargo.toml  build.rs
rust_libraries/libxorg/src/: bindings.h  bindings.rs  extern_function_definitions.rs  lib.rs
rust_libraries/libxorg/src/sys/: mod.rs  xlib.rs
rust_libraries/libxorg/tests/: integration_test.rs
rust_libraries/vulkan_bindgen/: Cargo.toml
src/: main.rs
(+22 files in other folders)
