[package]
name = "jt-morris_dot_com"
version = "0.1.0"
edition = "2021"


[workspace]
resolver = "2"
members=["proc_macros","auth0","db"]

[workspace.dependencies]
uuid={version = "1.10.0"}
dotenvy = "0.15.7"
serde ="1.0.203"
thiserror = "1.0.61"
tracing = "0.1.40"
anyhow = "1.0.86"
url="2.5"
base64 = "0.22.1"
reqwest = {version="0.12.7"}
# browser only dependencies!
wasm-bindgen= {version="0.2.93"}
web-sys={version="0.3.70"}
js-sys={version="0.3.70"}
figment={version = "0.10.19"}

# [profile.dev.package."*"]
# # opt-level = 3


[features]
tls=["rocket/tls"]
debug=[]
serialize=[]
deserialize=[]
# pqsys_bundled=["db-sync-pooled", "dep:pq-sys","pq-sys/bundled"]
# db-sync-pooled=["diesel/postgres","diesel/r2d2"]
# db-async-pooled=["dep:diesel-async","diesel-async/postgres","diesel-async/deadpool","dep:rustls","dep:rustls-native-certs","dep:tokio-postgres","dep:tokio-postgres-rustls"]
# default=["db-async-pooled"]


[dependencies]
auth0={path="./auth0"}
anyhow = {workspace=true}
serde = { workspace=true, features = ["derive"] }
thiserror = {workspace=true}
tracing = {workspace=true}
reqwest = {workspace=true}

tracing-subscriber = { version = "0.3.18",  features = [
    "time",
] }
serde_json = "1.0.127"
url = { workspace=true, features = ["serde"] }
uuid = { workspace=true, features = ["serde","v4"] }
proc_macros={path="./proc_macros"}
rmp-serde = { version = "1.3" }
bigdecimal = { version = "0.4.5", features = ["serde"] }
base64 = {workspace=true}

webauthn-rs-proto = {version = "0.5.0",features = ["wasm"]}
time = { version = "0.3.36", features = ["serde"] }
paste = "1.0.15"

[target.'cfg(all(target_arch="wasm32",target_os="unknown"))'.dependencies]
wasm-bindgen-futures="0.4.43"
js-sys="0.3.70"
yew = { version = "0.21",features=["csr","hydration"] }
db={path = "./db",features = ["wasm32-unknown-unknown"]}
web-sys={version="0.3.70",features=[
    "Window",
    "Document",
    "Element",
    "Location",
    "HtmlFormElement",
    "HtmlInputElement",
    "EventTarget",
    "FormData",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Navigator",
    "CredentialsContainer",
    "CredentialCreationOptions",
    "PublicKeyCredential",
    "console",
]}
wasm-bindgen= "0.2.93"




# non wasm/ server dependencies
[target.'cfg(not(all(target_arch="wasm32",target_os="unknown")))'.dependencies]
db={path = "./db",features = ["not-wasm32-unknown-unknown","figment","rocket"]}
# rustls = {version="0.23.12",optional = true}
# rustls-native-certs = {version = "0.8.0",optional = true}
# tokio-postgres = {version="0.7.11",optional = true}
# diesel-async = { version = "0.5.0", features = ["postgres","tokio"],optional = true }
# tokio-postgres-rustls = {version = "0.12.0",optional = true}
toml = "0.8.19"
wasm-opt = "0.116.1"
figment = {workspace=true}
reqwest = {workspace=true,default-features=false,features=["rustls-tls"]}
jsonwebtoken = "9.3.0"
dotenvy = { workspace=true}
webauthn-rs = "0.5.0"
urlencoding = "2.1.3"
futures-util = { version = "0.3.30", features = ["io", "tokio-io","sink"] }
rocket_dyn_templates = { version = "0.2.0",features=["tera"]}
# pq-sys={version = ">=0.4.0, <0.7.0",optional = true}
# diesel = { version = "2.2.3", features = ["postgres_backend", "serde_json", "time", "uuid","numeric"] }
# diesel_migrations = { version = "2.2.0", features = ["postgres"] }

html-minifier = "5.0.0"
csv-async = "1.3.0"
rocket = { version = "0.5.1", features = ["uuid", "secrets","msgpack"]}
yew = { version = "0.21",features=["ssr","csr","hydration"] }



[profile.release]
# opt-level = "s"
lto="fat"
strip = true
