[package]
name = "auth0"
version = "0.1.0"
edition = "2021"


[features]
rocket=["dep:rocket"]
gzip=["reqwest/gzip"]
brotli=["reqwest/brotli"]
deflate=["reqwest/deflate"]
debug=[]

[dependencies]
reqwest = {workspace=true,features=["json"]}
figment = "0.10"
tracing = "0.1"
anyhow = "1.0"
urlencoding = "2.1"
url = "2.5"
thiserror = "1.0"
jsonwebtoken = "9.2.0"
serde = {version="1.0",features=["derive"]}
rocket={version = "0.5",optional = true}
serde_json = "1.0.113"
time = { version = "0.3.34", features = ["serde"] }
tokio={version ="1",features = ["time"]}
