[package]
name="db"
version = "0.1.0"
edition = "2021"


# NOTE: I have decided not to support both syncronous and asyncrounous operations at this time.
# if needed, you will have to use some sort of async wrapper.




[dependencies]
# required dependencies
paste = "1.0.15"
serde_json = {version="1.0.127"}
uuid={workspace=true,features = ["serde"]}
diesel = { version = "2.2.3", features = ["postgres_backend", "serde_json", "time", "uuid","numeric",] }
bigdecimal = { version = "0.4.5", features = ["serde"] }
time = { version = "0.3.36", features = ["serde"] }
thiserror = {workspace=true}
anyhow = {workspace=true}
tracing={workspace=true}
url = { workspace=true, features = ["serde"] }

# only enable serde if needed
serde={workspace=true,features = ["derive"]}
# only available on wasm32-unknown-unknown / browser environment
wasm-bindgen= {workspace=true,optional = true}
web-sys={workspace=true,optional = true}
js-sys={workspace=true,optional = true}
# only available on non-browser targets that support sockets
diesel_migrations = { version = "2.2.0", features = ["postgres"],optional = true }
diesel-async = { version = "0.5.0", features = ["postgres","tokio","deadpool"],optional=true }
tokio-postgres-rustls = {version = "0.12.0",optional = true}
tokio-postgres = {version="0.7.11",optional = true}
rustls = {version="0.23.12",optional = true}
rustls-native-certs = {version = "0.8.0",optional = true}
tokio = {version="1.40.0",optional = true}
rocket = { version = "0.5.1", default-features = false,optional = true}
futures-util = { version = "0.3.30", features = ["io", "tokio-io","sink"],optional = true }

# completely optional features
figment = {workspace=true,optional = true}
garde = { version = "0.20.0", features = ["derive", "email", "phone-number", "url"] }

[features]
serialize=[]
deserialize=[]
rocket=["dep:rocket"]
debug=[]
figment=["dep:figment"]
default=["not-wasm32-unknown-unknown"]
# For browser only code!
wasm32-unknown-unknown=["dep:wasm-bindgen","dep:web-sys","dep:js-sys"]
# for all non-browser code
not-wasm32-unknown-unknown=["dep:diesel-async","dep:tokio-postgres-rustls","dep:rustls","dep:rustls-native-certs","dep:tokio","dep:diesel_migrations","dep:tokio-postgres","dep:futures-util"]
