[package]
name = "frontend"
version = "0.1.0"
edition = "2021"



[lib]
crate-type = ["cdylib", "rlib"]


[target.'cfg(all(target_arch="wasm32",target_os="unknown"))'.dependencies]
# tokio={version="1",features=["rt"]}


yew = { version = "0.21",features=["csr","hydration"] }
[target.'cfg(not(all(target_arch="wasm32",target_os="unknown")))'.dependencies]
# tokio={version = "1",features = ["fs"]}
rocket={version="0.5.1"}
yew = { version = "0.21",features=["ssr","csr","hydration"] }


[dependencies.wasm-bindgen]
version = "0.2.93"
# optional = true

[dependencies.js-sys]
version = "0.3.70"
# optional = true


[dependencies.web-sys]
version = "0.3.70"
# optional = true
features = [
    "Window",
    "Document",
    "Element",
    "Location",
    "HtmlFormElement",
    "HtmlInputElement",
    "EventTarget",
    "FormData",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Navigator",
    "CredentialsContainer",
    "CredentialCreationOptions",
    "PublicKeyCredential",
    "console",
]

[dependencies.wasm-bindgen-futures]
version = "0.4.43"
# optional = true
[dependencies.webauthn-rs-proto]
version = "0.5.0"
features = ["wasm"]
# optional = true

[dependencies]

base64 = {workspace=true}
rmp-serde = { version = "1.3" }
serde = { workspace=true, features = ["derive"] }
uuid = { workspace=true, features = ["serde"] }

# reqwest = {workspace=true,features=["json"]}

# yew = { version = "0.21",features=["ssr","csr","hydration"] }
